--- a/demo.html
+++ b/demo.html
@@ -32,7 +32,7 @@ Das Haus steht schief!
 var spellchecker = new alltiny.Spellchecker({highlightKnownWords: true});
 // load the german dictionary.
 jQuery.getJSON("dict/alltiny.dict.base.de_de.json", function(dict) {
-	spellchecker.addDictionary(dict);
+	spellchecker.addDictionary(new alltiny.Dictionary(dict));
 });
 var check = function(target) {
 	jQuery(target).html(spellchecker.check(jQuery(target).text()));
