started an English dictionary

--- a/demo.html
+++ b/demo.html
@@ -34,6 +34,9 @@ var spellchecker = new alltiny.Spellchecker({highlightKnownWords: true});
 jQuery.getJSON("dict/alltiny.dict.base.de_de.json", function(dict) {
 	spellchecker.addDictionary(new alltiny.Dictionary(dict));
 });
+jQuery.getJSON("dict/alltiny.dict.base.en_gb.json", function(dict) {
+	spellchecker.addDictionary(new alltiny.Dictionary(dict));
+});
 var check = function(target) {
 	jQuery(target).html(spellchecker.check(jQuery(target).text()));
 	// create reports.
