--- a/demo.html
+++ b/demo.html
@@ -64,16 +64,16 @@ var editor = new alltiny.Editor(jQuery('#content'), {
 		// create reports.
 		var unknownWords = [];
 		// calculate some statistics.
-		var countKnown = jQuery(target).find('span.spellcheck.highlight.ok').length;
-		var countUnknown = jQuery(target).find('span.spellcheck.highlight.unknown').length;
+		var countKnown   = jQuery(target).find('span.spellcheck.highlight.ok').length;
+		var countError   = jQuery(target).find('span.spellcheck.highlight.error').length;
 		var countWarning = jQuery(target).find('span.spellcheck.highlight.warn').length;
-		var countSum = countKnown + countUnknown + countWarning;
+		var countSum = countKnown + countError + countWarning;
 		// render a table as diagram.
 		var $tbody = jQuery('<tbody></tbody>');
 		jQuery('div.statistics').empty().append(jQuery('<table cellspacing="0"></table>').append($tbody));
 		$tbody.append(jQuery('<td class="ok"></td>').text('OK (' + (100 * countKnown / countSum).toFixed(2) + '%)').attr('title','OK - Words found in the dictionary assuming they are correct').css({'width': ((100 * countKnown / countSum) + '%')}));
 		$tbody.append(jQuery('<td class="warn"></td>').attr('title','Warning - Words found but not matching the dictionary entry').css({'width': ((100 * countWarning / countSum) + '%')}));
-		$tbody.append(jQuery('<td class="error"></td>').attr('title','Unknown - Words could not be found in dictionary').css({'width': 100 * countUnknown / countSum + '%'}));
+		$tbody.append(jQuery('<td class="error"></td>').attr('title','Unknown - Words could not be found in dictionary').css({'width': 100 * countError / countSum + '%'}));
 		// write donw all unknown word into a separate div.
 		jQuery(target).find('span.error.unknown').each(function(index, span) {
 			var word = jQuery(span).text();
