changed project structure; added libraries; updated ReadMe;

--- a/src/demo.html
+++ b/src/demo.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-<script type="text/javascript" src="src/alltiny-spellchecker.js"></script>
-<script type="text/javascript" src="src/rangy-core.js"></script>
-<script type="text/javascript" src="src/rangy-selectionsaverestore.js"></script>
-<script type="text/javascript" src="src/alltiny-editor.js"></script>
+<script type="text/javascript" src="lib/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="js/alltiny-spellchecker.js"></script>
+<script type="text/javascript" src="lib/rangy-core.js"></script>
+<script type="text/javascript" src="lib/rangy-selectionsaverestore.js"></script>
+<script type="text/javascript" src="js/alltiny-editor.js"></script>
 <style type="text/css">
 body { margin: 0; }
 #header { padding: 10px; }
