--- a/src/demo.html
+++ b/src/demo.html
@@ -9,7 +9,7 @@
 body { margin: 0; }
 #header { padding: 10px; }
 #header span.logo { font-weight: bold; font-size: 24px; color: #f0f0f0; text-shadow: 0 0 7px #303030; }
-div.editor { border-radius: 5px; padding: 7px; box-shadow: inset 0 0 10px #181810; margin: 10px }
+div.editor { border-radius: 5px; padding: 7px; box-shadow: inset 0 0 10px #181810; margin: 10px; min-height:30px; }
 div.report { margin: 10px; }
 div.report span { margin-right: 5px; }
 div.statistics { border-radius: 5px; margin: 10px; box-shadow: inset 0 0 10px #181810; overflow: hidden; background-color: #f0f0f0; }
@@ -17,6 +17,8 @@ div.statistics table { width: 100%; color: #404040;}
 div.statistics table td { padding-left: 5px;}
 span.spellcheck { border-radius: 5px;}
 body.sport a, body.sport a:visited {color:inherit;}
+/* get placeholders for contenteditable working */
+[contentEditable=true]:empty:not(:focus):before { content:attr(placeholder); color:grey; }
 /* themes */
 body.sport { background-color: #606360; color: #c8c8c0; font-family: tahoma; }
 body.sport #header { background-color: #e03020; }
@@ -32,11 +34,20 @@ body.sport span.spellcheck.warn { background-color: #eeee99; color:#404040;}
 </head>
 <body class="sport">
 <div id="header"><span class="logo">alltiny spellchecker</span></div>
-<div id="content" class="editor" contenteditable="true">
-Das Haus steht schief!
-</div>
+<div id="content" class="editor" contenteditable="true" placeholder="Hier können Sie Ihren Text eingeben oder hineinkopieren um ihn prüfen zu lassen. Ihr Text wird nicht an einen Server übertragen, sondern bleibt ausschließlich auf Ihrem Rechner."></div>
 <div class="statistics"></div>
 <div class="report"></div>
+<script type="text/javascript">
+// to get the placeholder working also after something was inserted and then removed from the contenteditable.
+jQuery(function($){
+    $("[contenteditable]").blur(function(){
+        var $element = $(this);
+        if (!$element.text().trim().length) {
+            $element.empty();
+        }
+    });
+});
+</script>
 <script type="text/javascript">
 // initialize the spellchecker.
 var spellchecker = new alltiny.Spellchecker({highlightKnownWords: true});
