--- a/src/demo.html
+++ b/src/demo.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8"/>
 <script type="text/javascript" src="lib/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="js/alltiny-spellchecker.js"></script>
 <script type="text/javascript" src="lib/rangy-core.js"></script>
