use utf-8-characters

--- a/src/demo.html
+++ b/src/demo.html
@@ -36,7 +36,7 @@ body.sport span.spellcheck.warn { background-color: #eeee99; color:#404040;}
 </head>
 <body class="sport">
 <div id="header"><span class="logo">alltiny spellchecker</span></div>
-<div id="content" class="editor" contenteditable="true" placeholder="Hier können Sie Ihren Text eingeben oder hineinkopieren um ihn prüfen zu lassen. Ihr Text wird nicht an einen Server übertragen, sondern bleibt ausschließlich auf Ihrem Rechner."></div>
+<div id="content" class="editor" contenteditable="true" placeholder="Hier kÃ¶nnen Sie Ihren Text eingeben oder hineinkopieren um ihn prÃ¼fen zu lassen. Ihr Text wird nicht an einen Server Ã¼bertragen, sondern bleibt ausschlieÃŸlich auf Ihrem Rechner."></div>
 <div class="statistics"></div>
 <div class="report"></div>
 <script type="text/javascript">
