changed introduction wording

--- a/src/demo.html
+++ b/src/demo.html
@@ -46,7 +46,7 @@ body.sport span.spellcheck.warn { background-color: #eeee99; color:#404040;}
 	<div id="language"></div>
 	<div style="clear:both"></div>
 </div>
-<div id="content" class="editor" contenteditable="true" placeholder="Hier können Sie Ihren Text eingeben oder hineinkopieren um ihn prüfen zu lassen. Ihr Text wird nicht an einen Server übertragen, sondern bleibt ausschließlich auf Ihrem Rechner."></div>
+<div id="content" class="editor" contenteditable="true" placeholder="Hier können Sie Ihren Text eingeben oder hineinkopieren um ihn prüfen zu lassen. Ihr Text wird nicht an einen Server übertragen. Die Rechtschreibprüfung findet ausschließlich auf Ihrem Rechner statt."></div>
 <div class="statistics"></div>
 <div class="report"></div>
 <script type="text/javascript">
