implemented a handling for missing whitespaces between findings

--- a/src/demo.html
+++ b/src/demo.html
@@ -35,8 +35,7 @@ body.sport td.ok { background-color: #40e010; }
 body.sport td.warn { background-color: #e0e030; }
 body.sport td.error { background-color: #e04010; }
 //body.sport span.spellcheck.ok { background-color: #99ee99;}
-body.sport span.spellcheck.error { background-color: #ee9999;}
-body.sport span.spellcheck.error.unknown { background-color: #e04010; color:#e0e0e0;}
+body.sport span.spellcheck.error { background-color: #e04010; color:#e0e0e0;}
 body.sport span.spellcheck.warn { background-color: #eeee99; color:#404040;}
 </style>
 </head>
