--- a/src/demo.html
+++ b/src/demo.html
@@ -5,6 +5,7 @@
 <script type="text/javascript" src="lib/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="js/alltiny-selectbox.js"></script>
 <script type="text/javascript" src="js/alltiny-spellchecker.js"></script>
+<script type="text/javascript" src="js/alltiny-i18n.js"></script>
 <script type="text/javascript" src="lib/rangy-core.js"></script>
 <script type="text/javascript" src="lib/rangy-selectionsaverestore.js"></script>
 <script type="text/javascript" src="js/alltiny-editor.js"></script>
@@ -22,8 +23,7 @@ div.statistics table td { padding-left: 5px;}
 span.spellcheck { border-radius: 5px;}
 body.sport a, body.sport a:visited {color:inherit;}
 #language { float: left; margin-top: 8px; margin-left: 8px;}
-#language img.flag { display: block; height: 32px; width: 48px; opacity: 0.8; }
-#language img.flag:hover { opacity: 1; }
+#language img.flag { display: block; height: 32px; width: 48px; }
 /* get placeholders for contenteditable working */
 [contentEditable=true]:empty:not(:focus):before { content:attr(placeholder); color:grey; }
 /* themes */
@@ -69,13 +69,23 @@ var languageSelector = new alltiny.SelectBox(jQuery('#language'), {
 	items       : languages,
 	itemRenderer: function($element, item) {
 		jQuery('<img class="flag">').attr('src', item.flag).attr('alt', item.value).appendTo($element);
-	}
+	},
+	selectionItemOffsetXPx: 36
+});
+// initialize i18n.
+var i18n = new alltiny.i18n({
+	wordingFileURLPattern   : 'i18n/spellchecker.{language}.js',
+	currentLanguageRetriever: function() { return languageSelector.getSelectedValue(); }
+});
+languageSelector.change(function() {
+	jQuery('#content').attr('placeholder', i18n.get('editor_placeholder_text'))
 });
 // use the current navigator language as default language.
 switch (navigator.language)  {
 	case 'de': languageSelector.setSelectedValue('de_DE'); break;
 	default  : languageSelector.setSelectedValue('en_UK');
 }
+
 
 // initialize the spellchecker.
 var spellchecker = new alltiny.Spellchecker({autoResetAfterApply:false});
