added a dictionary to cover chemical elements and composits

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@ var addDictionary = function(dict) {
 jQuery.getJSON("src/dict/alltiny.dict.base.de_de.json", addDictionary);
 jQuery.getJSON("src/dict/alltiny.dict.base.en_gb.json", addDictionary);
 jQuery.getJSON("src/dict/alltiny.dict.base.de_ch.json", addDictionary);
+jQuery.getJSON("src/dict/alltiny.dict.chemicals.json", addDictionary);
 jQuery.getJSON("src/dict/alltiny.dict.tradenames.json", addDictionary);
 var checkStartTimestamp;
 var editor = new alltiny.Editor(jQuery('#editor'), {
