--- a/src/demo.html
+++ b/src/demo.html
@@ -101,6 +101,7 @@ var addDictionary = function(dict) {
 jQuery.getJSON("dict/alltiny.dict.base.de_de.json", addDictionary);
 jQuery.getJSON("dict/alltiny.dict.base.en_gb.json", addDictionary);
 jQuery.getJSON("dict/alltiny.dict.base.de_ch.json", addDictionary);
+jQuery.getJSON("dict/alltiny.dict.chemicals.json", addDictionary);
 jQuery.getJSON("dict/alltiny.dict.tradenames.json", addDictionary);
 var checkStartTimestamp;
 var editor = new alltiny.Editor(jQuery('#content'), {
